feat: :sparkles: add get student grades endpoint to swagger
